--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "slider"
+name = "slyde"
 version = "0.1.0"
 description = "Sliding puzzle in Ratatui"
 authors = ["Tyler Breisacher <matrixfrog@gmail.com>"]
